@@ -36,56 +36,4 @@ abstract class JHtmlContact
 
 		return $html;
 	}
-
-
-	/**
-	 * Displays the publishing state legend for contacts.
-	 *
-	 * @return	void
-	 * @since	1.6
-	 */
-	function Legend()
-	{
-		?>
-		<table cellspacing="0" cellpadding="4" border="0" align="center">
-		<tr align="center">
-			<td>
-			<?php echo JHTML::_('image','admin/publish_y.png', JText::_('Pending'), array('width' => 16, 'height' => 16, 'border' => 0), true); ?>
-			</td>
-			<td>
-			<?php echo JText::_('PUBLISHED_BUT_IS'); ?> <u><?php echo JText::_('Pending'); ?></u> |
-			</td>
-			<td>
-			<?php echo JHTML::_('image','admin/publish_g.png', JText::_('Visible'), array('width' => 16, 'height' => 16, 'border' => 0), true); ?>
-			</td>
-			<td>
-			<?php echo JText::_('PUBLISHED_AND_IS'); ?> <u><?php echo JText::_('Current'); ?></u> |
-			</td>
-			<td>
-			<?php echo JHTML::_('image','admin/publish_r.png', JText::_('Finished'), array('width' => 16, 'height' => 16, 'border' => 0), true); ?>
-			</td>
-			<td>
-			<?php echo JText::_('PUBLISHED_BUT_HAS'); ?> <u><?php echo JText::_('Expired'); ?></u> |
-			</td>
-			<td>
-			<?php echo JHTML::_('image','admin/publish_x.png', JText::_('Finished'), array('width' => 16, 'height' => 16, 'border' => 0), true); ?>
-			</td>
-			<td>
-			<?php echo JText::_('NOT_PUBLISHED'); ?> |
-			</td>
-			<td>
-			<?php echo JHTML::_('image','admin/disabled.png', JText::_('JARCHIVED'), array('width' => 16, 'height' => 16, 'border' => 0), true); ?>
-			</td>
-			<td>
-			<?php echo JText::_('JARCHIVED'); ?>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="10" align="center">
-			<?php echo JText::_('JGLOBAL_CLICK_TO_TOGGLE_STATE'); ?>
-			</td>
-		</tr>
-		</table>
-		<?php
-	}
 }
